force-app/main/default/objects/Food_Token__c/Food_Token__c.object-meta.xml
<CustomObject>
    <label>Food Token</label>
    <nameField>
        <label>Food Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Tokens</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>