force-app/main/default/objects/Food_Token__c/fields/Meal_Date__c.field-meta.xml
<CustomField>
    <fullName>Meal_Date__c</fullName>
    <label>Meal Date</label>
    <type>Date</type>
</CustomField>