force-app/main/default/objects/Food_Token__c/fields/Meal_Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Meal_Session_Time__c</fullName>
    <formula>CASE(
Meal_Type__c,

&quot;Breakfast&quot;,&quot;7:30 AM - 9:00 AM&quot;,

&quot;Lunch&quot;,&quot;12:00 PM - 2:00 PM&quot;,

&quot;Snacks&quot;,&quot;4:00 PM - 5:00 PM&quot;,

&quot;Dinner&quot;,&quot;7:00 PM - 9:00 PM&quot;,

&quot;Not Assigned&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meal Session Time</label>
    <type>Text</type>
</CustomField>