force-app/main/default/objects/Food_Token__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <label>Menu Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>