force-app/main/default/objects/Food_Token__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Food Tokens</relationshipLabel>
    <relationshipName>Food_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>