force-app/main/default/objects/Food_Token__c/validationRules/Limit_Advance_Booking.validationRule-meta.xml
<ValidationRule>
    <fullName>Limit_Advance_Booking</fullName>
    <active>true</active>
    <description>Students can book meals only up to 2 days in advance.</description>
    <errorConditionFormula>Meal_Date__c &gt; TODAY() + 2</errorConditionFormula>
    <errorDisplayField>Meal_Date__c</errorDisplayField>
    <errorMessage>Food tokens can only be booked up to 2 days in advance.</errorMessage>
</ValidationRule>